<resources>
    <string name="app_name">Weather Whisper</string>
    <string name="home">Home</string>
    <string name="alerts">Alerts</string>
    <string name="location">Location</string>
    <string name="favourite">Favourite</string>
    <string name="setting">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hourly_forecast">Hourly Forecast</string>
    <string name="weekly_forecast">Weekly Forecast</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="cloud">Cloud</string>
    <string name="visibility">Visibility</string>
    <string name="language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="celsuis">Celsuis</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="temperature">Temperature</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="meter_sec">Meter / Sec</string>
    <string name="mile_hour">Mile / Hour</string>
    <string name="kelvin">Kelvin</string>
    <string name="map">Map</string>
    <string name="search_for_a_city">Search for a city</string>
    <string name="current_location">Current location</string>
    <string name="googleMapApiKey">AIzaSyDdkK2dBt692LmLpX9Ooq0YJ3zWbFk1_hM</string>
    <string name="alertTitle">Delete Weather Alert</string>
    <string name="alertMessage">Are you sure you want to delete the weather alert ?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="alertDeleted">Weather alert deleted</string>
    <string name="favMessage">Are you sure you want to delete the city from favourite ?</string>
    <string name="favDeleted">City deleted from favourite</string>
    <string name="weatherDisc">Weather conditions in </string>
    <string name="completeWeatherDis">:</string>
</resources>