<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:orientation="vertical"
    android:background="@drawable/dialog_background"
    tools:ignore="MissingConstraints">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/purple" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:paddingStart="8dp"
        android:paddingTop="5dp"
        android:paddingEnd="8dp"
        android:paddingBottom="5dp"
        android:text="@string/favMessage"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/purple"
            android:text="@string/delete"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="35dp"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/darkGray"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="35dp"
            android:text="@string/cancel" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="15dp"
        android:background="@color/purple" />

</LinearLayout>
